--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lodash": "^2.4.1",
     "requestify": "0.1.17",
     "mongodb": "2.0.33",
-    "request":"2.42.0"
+    "request":"2.42.0",
+    "opbeat":"1.4.1"
   },
   "scripts": {
     "start": "node app.js"
