--- a/app.json
+++ b/app.json
@@ -2,11 +2,8 @@
   "name": "Crowd ReLauncher",
   "description": "ReLauncher cancels and relaunches units which are in judging mode for too long time",
   "repository": "https://github.com/pavelk2/crowd-launcher-api",
-  "logo": "https://node-js-sample.herokuapp.com/node.svg",
+  "logo": "http://cliparts.co/cliparts/8cE/59B/8cE59BXca.png",
   "keywords": ["node", "express", "static"],
-  "addons": [
-    "mongolab"
-  ],
   "env": {
     "HEROKU_URL": {
       "description": "The URL of this Heroku app.",
