--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
   "logo": "http://cliparts.co/cliparts/8cE/59B/8cE59BXca.png",
   "keywords": ["node", "express", "static"],
   "env": {
+    "BUILDPACK_URL": "https://github.com/ddollar/heroku-buildpack-multi.git",
     "HEROKU_URL": {
       "description": "The URL of this Heroku app.",
       "value": "http://YOURAPPNAME.herokuapp.com"
